--- a/src/app/layouts/dashboard-layouts/dashboard-layouts.component.html
+++ b/src/app/layouts/dashboard-layouts/dashboard-layouts.component.html
@@ -14,11 +14,11 @@
                       </mat-panel-title>
                     </mat-expansion-panel-header>
                     <div class="list-meu">
-                        <div class="each-menu" [routerLink]="['/home/upload-image']" routerLinkActive="active" >
+                        <div class="each-menu" [routerLink]="['/dashboard/upload-image']" routerLinkActive="active" >
                             <mat-icon>person</mat-icon>
                             <p>Upload Images</p>
                         </div>
-                        <div class="each-menu" [routerLink]="['/home/upload-multi-images']"  routerLinkActive="active" >
+                        <div class="each-menu" [routerLink]="['/dashboard/upload-multi-images']"  routerLinkActive="active" >
                             <mat-icon>flag</mat-icon>
                             <p>Upload Multiple Image</p>
                         </div>
