--- a/src/app/pages/upload-multi-images/upload-multi-images.component.html
+++ b/src/app/pages/upload-multi-images/upload-multi-images.component.html
@@ -23,6 +23,17 @@
                                 </div>
                                  </ng-container>
                             </td>
+                            <td>
+                                <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                                    <mat-icon>more_vert</mat-icon>
+                                  </button>
+                                  <mat-menu #menu="matMenu">
+                                    <button mat-menu-item (click)="create(item)">
+                                      <mat-icon>edit</mat-icon>
+                                      <span>Edit</span>
+                                    </button>
+                                  </mat-menu>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
