--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -1,10 +1,12 @@
 @import './button.scss';
 @import './header.scss';
 @import './main.scss';
+@import './footer.scss';
 *{
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style: none;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
